MAT-9274 : fixing alignment issues
Former-commit-id: eb42b143a6bdcbe62d2c5f1b5525e1c727fda24b

--- a/war/Mat.css
+++ b/war/Mat.css
@@ -1497,7 +1497,7 @@ padding: 2px;
 
 .contentWithHeadingHeader {
      position: relative;
-     width: 610px;
+     width: 590px;
      padding-bottom: 10px;
     
 }
